Change images in about

--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -12,6 +12,7 @@
     <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
+    <link rel="Styleheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
@@ -24,7 +25,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -65,7 +66,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link active"><i class="fa-solid fa-house"></i>Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
@@ -110,7 +111,7 @@
                         <div class="p-3" style="max-width: 1100px;">
                             <h5 class="text-white text-uppercase">MARYTECHENOCK SOLUTIONS CONSULTANCY</h5>
                             <h1 class="display-1 text-white mb-md-4">Your Leading Global Digital Transformation Expert </h1>
-                            <p data-animation="fadeInUp" data-delay="">We understand that navigating into today’s technology climate can be bit frustrating, especially within the digital transformation industry and key distinction required for it to be successful.
+                            <p data-animation="fadeInUp" data-delay="">We understand that navigating into todays technology climate can be bit frustrating, especially within the digital transformation industry and key distinction required for it to be successful.
                             MARYTECHENOCK SOLUTIONS serves as an technology-agnostic advisor and collaborative partner to our client community. We provide unparallel industry expertise and proven methodologies to optimize any technology transformation and maximize business value. </p>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get A Free Quote</a>
                             <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Please Contact Us</a>
