--- a/consultancy-website-template/about.html
+++ b/consultancy-website-template/about.html
@@ -165,10 +165,10 @@
             </div>
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/Bizamare Beloved (4).JPG" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
+                        <h3 class="text-white">Beloved Bizamare</h3>
+                        <p class="text-white text-uppercase mb-0">Chief Executive officer (CEO) & Founder.</p>
                     </div>
                 </div>
             </div>
