--- a/consultancy-website-template/service.html
+++ b/consultancy-website-template/service.html
@@ -70,7 +70,16 @@
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link active">Service</a>
+                <div class="nav-item dropdown"></div>
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
+                <div class="dropdown-menu m-0">
+                    <a href="blog.html" class="dropdown-item">Digital Transformation</a>
+                    <a href="Web design and Development.html" class="dropdown-item">Web design and Development</a>
+                    <a href="Digital Marketing.html" class="dropdown-item">Digital Marketing</a>
+                    <a href="Animation & 3D Product Designing.html" class="dropdown-item">Animation & 3D Product Designing</a>
+                    <a href="Mobile and web Application developments.html" class="dropdown-item">Mobile and web Application developments</a>
+                    <a href="IT CONSULTING SERVICES.html" class="dropdown-item">IT CONSULTING SERVICES</a>
+                    <a href="Search Engine Optimization (SEO).html" class="dropdown-item">Search Engine Optimization (SEO)</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
