--- a/consultancy-website-template/contact.html
+++ b/consultancy-website-template/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CONSULT - Consultancy Website Template</title>
+    <title>MARYTECHENOCK SOLUTIONS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -38,18 +38,16 @@
                 <div class="d-inline-flex align-items-center">
                     <a class="text-body py-2 pe-3 border-end" href=""><small>FAQs</small></a>
                     <a class="text-body py-2 px-3 border-end" href=""><small>Support</small></a>
-                    <a class="text-body py-2 px-3 border-end" href=""><small>Privacy</small></a>
-                    <a class="text-body py-2 px-3 border-end" href=""><small>Policy</small></a>
                     <a class="text-body py-2 ps-3" href=""><small>Career</small></a>
                 </div>
             </div>
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@example.com</p>
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@marytechenock Solutions.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+263788684321</p>
                     </div>
                 </div>
             </div>
@@ -61,7 +59,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>consult</h1>
+            <img class="logo w-100" src="img/Image1.jpeg" alt="Image">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -108,6 +106,9 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Contact For Any Queries</h1>
+                <h5 class="text-white text-uppercase">MARYTECHENOCK IT Solutions Specialist</h5>
+                <p data-animation="fadeInUp" data-delay="">We’re friendly & available to chat. Reach out to us anytime and we’ll happily answer your questions.
+                    .</p>
                 <form>
                     <div class="row g-3">
                         <div class="col-6">
