--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -22,7 +22,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -193,6 +193,7 @@
                     </div>
                     <h3 class="mb-3">Digital Transformation Service</h3>
                     <p class="mb-0">Our consultants recognize there is no one-size-fits-all solution. We work with our clients to develop a tailored digital strategy and select a software to best support it.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -202,6 +203,7 @@
                     </div>
                     <h3 class="mb-3">Web design and Development</h3>
                     <p class="mb-0">We build visually stunning websites that engage visitors and prompt them to take action. Our design process begins with brand research and collaboration on site architecture and visual style and maintains a strict adherence to user interface design practices.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -211,6 +213,7 @@
                     </div>
                     <h3 class="mb-3">Digital Marketing</h3>
                     <p class="mb-0">We specialize in designing and launch targeted Facebook, LinkedIn, Instagram, or Google ads, using an allocated Ads Budget, for increased engagement and a larger following, as and when the client advises, upon mutual agreement of the budget to be spent for such paid marketing.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -220,6 +223,7 @@
                     </div>
                     <h3 class="mb-3">Animation & 3D Product Designing</h3>
                     <p class="mb-0">We design 3D designs with three-dimensional models based on a client's specifications and requirements. Animation as service is ideal for businesses of all sizes, from startups to well-established companies. We specialize in animation video services and offer high-quality illustrations for all your marketing and social media necessities.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -229,6 +233,7 @@
                     </div>
                     <h3 class="mb-3">Mobile and web Application developments</h3>
                     <p class="mb-0">We deliver top-quality native mobile app development services to clients in various industries, we help to bring developed applications quickly to market. We build hybrid web application with standard web technologies such as, JavaScript, CSS, and HTML5 and we bundle them as app installation packages. </p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -238,6 +243,7 @@
                     </div>
                     <h3 class="mb-3">IT CONSULTING SERVICES </h3>
                     <p class="mb-0">Our strategic IT consulting will help you automate and digitalize operations, optimize the software portfolio, and implement the latest technologies.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -247,6 +253,7 @@
                     </div>
                     <h3 class="mb-3">Search Engine Optimization (SEO)</h3>
                     <p class="mb-0">Get your website ranking higher in the search results, earn more qualified organic traffic and increase your website users. With our managed SEO services we offer On-Page and Off-Site customisable search engine optimisation campaigns that include a real-time dashboard so you can see the growth of your website.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
         </div>
@@ -268,29 +275,28 @@
                             <i class="fa fa-cubes fs-4 text-white"></i>
                         </div>
                         <h3>Best In Industry</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0"></p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-percent fs-4 text-white"></i>
                         </div>
                         <h3>99% Success Rate</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0"></p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-award fs-4 text-white"></i>
                         </div>
                         <h3>Award Winning</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0"></p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="d-block bg-primary h-100 text-center">
                     <img class="img-fluid" src="img/Marytech Logo_Red-02.png" alt="">
-                    <div class="p-4">
-                        <p class="text-white mb-4">Clita nonumy sanctus nonumy et clita tempor, et sea amet ut et sadipscing rebum amet takimata amet, sed accusam eos eos dolores dolore et. Et ea ea dolor rebum invidunt clita eos. Sea accusam stet stet ipsum, sit ipsum et ipsum kasd</p>
+                    <div class="p-4">We are passionate about our offerings and client satisfaction and it shows in the level of service that we provide. We are always willing to to help find the perfect solution for your needs. Contact us about any questions you have or even just some advice or a chat… Always Happy To Help!</p>
                         <a href="" class="btn btn-light py-md-3 px-md-5 rounded-pill mb-2">Learn More</a>
                     </div>
                 </div>
@@ -302,14 +308,14 @@
                             <i class="far fa-smile-beam fs-4 text-white"></i>
                         </div>
                         <h3>100% Happy Client</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0"></p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-user-tie fs-4 text-white"></i>
                         </div>
                         <h3>Professional Advisors</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0"></p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
@@ -386,7 +392,7 @@
         <div class="row g-5">
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
                         <h3 class="text-white">Full Name</h3>
                         <p class="text-white text-uppercase mb-0">Designation</p>
@@ -404,7 +410,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
                         <h3 class="text-white">Full Name</h3>
                         <p class="text-white text-uppercase mb-0">Designation</p>
